--- a/kp.html
+++ b/kp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
-<title>Redirecting to https://tonyle.com/junior-engineers/kensington</title>
-<meta http-equiv="refresh" content="0; URL=/junior-engineers/kensington">
-<link rel="canonical" href="/junior-engineers/kensington">
+<title>Redirecting to https://tonyle.com/teaching/kensington</title>
+<meta http-equiv="refresh" content="0; URL=/teaching/kensington">
+<link rel="canonical" href="/teaching/kensington">
