Redirect to new page

--- a/kp.html
+++ b/kp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
-<title>Redirecting to https://tonyle.com/teaching/kensington</title>
-<meta http-equiv="refresh" content="0; URL=/teaching/kensington">
-<link rel="canonical" href="/teaching/kensington">
+<title>Redirecting to https://tonyle.com/classes/ken224</title>
+<meta http-equiv="refresh" content="0; URL=/classes/ken224">
+<link rel="canonical" href="/classes/ken224">
