--- a/lcw.html
+++ b/lcw.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
-<title>Redirecting to https://tonyle.com/teaching/lane-cove-west</title>
-<meta http-equiv="refresh" content="0; URL=/teaching/lane-cove-west">
-<link rel="canonical" href="/teaching/lane-cove-west">
+<title>Redirecting to https://tonyle.com/classes/lcw224</title>
+<meta http-equiv="refresh" content="0; URL=/classes/lcw224">
+<link rel="canonical" href="/classes/lcw224">
