--- a/nb.html
+++ b/nb.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
-<title>Redirecting to https://tonyle.com/teaching/neutral-bay</title>
-<meta http-equiv="refresh" content="0; URL=/teaching/neutral-bay">
-<link rel="canonical" href="/teaching/neutral-bay">
+<title>Redirecting to https://tonyle.com/classes/neu224</title>
+<meta http-equiv="refresh" content="0; URL=/classes/neu224">
+<link rel="canonical" href="/classes/neu224">
