--- a/fs.html
+++ b/fs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
-<title>Redirecting to https://tonyle.com/classes/for224</title>
-<meta http-equiv="refresh" content="0; URL=/classes/for224">
-<link rel="canonical" href="/classes/for224">
+<title>Redirecting to https://tonyle.com/classes/fst224</title>
+<meta http-equiv="refresh" content="0; URL=/classes/fst224">
+<link rel="canonical" href="/classes/fst224">
