--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Tony Le">
     <title>Tony Le</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script type="module" src="color-modes.js"></script>
   </head>
   <body class="col-lg-8 mx-auto p-4 py-md-5">
     <header class="pb-3 mb-5 border-bottom" id="top">
