--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" data-bs-theme="auto">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Welcome to my humble abode">
-    <meta name="author" content="Tony Le">
-    <title>Tony Le</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script type="module" src="color-modes.js"></script>
-  </head>
-  <body class="col-lg-8 mx-auto p-4 py-md-5">
-    <header class="pb-3 mb-5 border-bottom" id="top">
-      <a href="/" class="text-body-emphasis text-decoration-none">
-        <span class="fs-4">Tony Le</span>
-      </a>
-    </header>
-    <main class="fs-5 col-md-8">
-      <h1 class="text-body-emphasis">About</h1>
-      <p>I am a Master of IT student at UNSW. You may also know me from USYD, where I dabbled in Medical Physics, or ANU, where I majored in Astronomy and Astrophysics.</p>
-      <p>I’ve been interested in science and technology for as long as I can remember, and I’m passionate about teaching and sharing knowledge with others.</p>
-      <p>I run coding and robotics classes in Sydney where I help primary and secondary school students develop their problem-solving capability, communication skills and programming ability.</p>
-      <p>When I’m not collecting degrees, or teaching in the classroom, I like to keep myself busy with unimportant nonsense like maintaining this website.</p>
-    </main>
-    <footer class="pt-5 my-5 text-body-secondary border-top">
-      <a href="#top" style="color: unset; text-decoration: unset;">Back to top</a>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Welcome to my humble abode">
+  <meta name="author" content="Tony Le">
+  <title>Tony Le</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <script type="module" src="color-modes.js"></script>
+</head>
+<body class="col-lg-8 mx-auto p-4 py-md-5">
+  <header class="pb-3 mb-5 border-bottom" id="top">
+    <a href="/" class="text-body-emphasis text-decoration-none">
+      <span class="fs-4">Tony Le</span>
+    </a>
+  </header>
+  <main class="fs-5 col-md-8">
+    <h1 class="text-body-emphasis">About</h1>
+    <p>I am a Master of IT student at UNSW. You may also know me from USYD, where I dabbled in Medical Physics, or ANU, where I majored in Astronomy and Astrophysics.</p>
+    <p>I’ve been interested in science and technology for as long as I can remember, and I’m passionate about teaching and sharing knowledge with others.</p>
+    <p>I run coding and robotics classes in Sydney where I help primary and secondary school students develop their problem-solving capability, communication skills and programming ability.</p>
+    <p>When I’m not collecting degrees, or teaching in the classroom, I like to keep myself busy with unimportant nonsense like maintaining this website.</p>
+  </main>
+  <footer class="pt-5 my-5 text-body-secondary border-top">
+    <a href="#top" style="color: unset; text-decoration: unset;">Back to top</a>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
+</body>
 </html>
