--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="author" content="Tony Le">
   <title>Tony Le</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <script type="module" src="color-modes.js"></script>
 </head>
 <body class="col-lg-8 mx-auto p-4 py-md-5">
@@ -15,11 +16,30 @@
       <span class="fs-4">Tony Le</span>
     </a>
   </header>
-  <main class="fs-5 col-md-8">
+  <main>
     <h1 class="text-body-emphasis">About</h1>
-    <p>I am a Master of IT student at UNSW. You may also know me from USYD, where I dabbled in Medical Physics, or ANU, where I majored in Astronomy and Astrophysics.</p>
-    <p>I’ve been interested in science and technology for as long as I can remember, and I’m passionate about teaching and sharing knowledge with others.</p>
-    <p>When I’m not collecting degrees, or teaching in the classroom, I like to keep myself busy with unimportant nonsense like maintaining this website.</p>
+    <p class="fs-5 col-md-8">I am a Master of IT student at UNSW. You may also know me from USYD, where I dabbled in Medical Physics, or ANU, where I majored in Astronomy and Astrophysics.</p>
+    <p class="fs-5 col-md-8">I like to keep myself busy with unimportant nonsense like maintaining this website.</p>
+    <hr class="col-3 col-md-2 mt-5 mb-5">
+    <div class="row g-5">
+      <div class="col-md-6">
+        <h2 class="text-body-emphasis">Personal projects</h2>
+        <p>Informal written retrospectives that some people might call blogging.</p>
+        <ul class="list-unstyled ps-0">
+          <li><a class="icon-link mb-1" href="/"><i class="bi-arrow-right-circle-fill"></i>pgc-newsletter</a> (coming soon)</li>
+          <li><a class="icon-link mb-1" href="/"><i class="bi-arrow-right-circle-fill"></i>coursework-roadmap</a> (coming soon)</li>
+          <li><a class="icon-link mb-1" href="/"><i class="bi-arrow-right-circle-fill"></i>learn-zhuyin</a> (coming soon)</li>
+        </ul>
+      </div>
+      <div class="col-md-6">
+        <h2 class="text-body-emphasis">External links</h2>
+        <p>Featuring sensible defaults - not opening in a new tab.</p>
+        <ul class="list-unstyled ps-0">
+          <li><a class="icon-link mb-1" href="https://github.com/tfle" ><i class="bi-github"></i>GitHub</a></li>
+          <li><a class="icon-link mb-1" href="https://www.linkedin.com/in/tonyfle/"><i class="bi-linkedin"></i>LinkedIn</a></li>
+        </ul>
+      </div>
+    </div>
   </main>
   <footer class="pt-5 my-5 text-body-secondary border-top">
     <a href="#top" style="color: unset; text-decoration: unset;">Back to top</a>
