Change email icon

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2 class="text-body-emphasis">External links</h2>
         <p>Featuring sensible defaults - not opening in a new tab.</p>
         <ul class="list-unstyled ps-0">
-          <li><a class="icon-link mb-1" href="mailto:contact@tonyle.com"><i class="bi-envelope-fill"></i>Email</a></li>
+          <li><a class="icon-link mb-1" href="mailto:contact@tonyle.com"><i class="bi-envelope"></i>Email</a></li>
           <li><a class="icon-link mb-1" href="https://github.com/tfle" ><i class="bi-github"></i>GitHub</a></li>
           <li><a class="icon-link mb-1" href="https://www.linkedin.com/in/tonyfle/"><i class="bi-linkedin"></i>LinkedIn</a></li>
         </ul>
