--- a/index.html
+++ b/index.html
@@ -1,50 +1,38 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="auto">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Welcome to my humble abode">
-  <meta name="author" content="Tony Le">
-  <title>Tony Le</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <script type="module" src="color-modes.js"></script>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <title>Tony Le.</title>
+    <style>
+        body {
+            max-width: 650px;
+            margin: 50px auto;
+            padding: 0 50px;
+            font-size: 28px;
+            line-height: 1.6;
+            color: #444;
+        }
+
+        h1, h2, h3 {
+            line-height: 1.2;
+        }
+
+        a {
+            color: #444;
+        }
+    </style>
 </head>
-<body class="col-lg-8 mx-auto p-4 py-md-5">
-  <header class="pb-3 mb-5 border-bottom" id="top">
-    <a href="/" class="text-body-emphasis text-decoration-none">
-      <span class="fs-4">Tony Le</span>
-    </a>
-  </header>
-  <main>
-    <h1 class="text-body-emphasis">About</h1>
-    <p class="fs-5 col-md-8">I am a Master of IT student at UNSW. You may also know me from USYD, where I dabbled in Medical Physics, or ANU, where I majored in Astronomy and Astrophysics.</p>
-    <p class="fs-5 col-md-8">I like to keep myself busy with unimportant nonsense like maintaining this website.</p>
-    <hr class="col-3 col-md-2 mt-5 mb-5">
-    <div class="row g-5">
-      <div class="col-md-6">
-        <h2 class="text-body-emphasis">Personal projects</h2>
-        <p>Informal written retrospectives that some people might call blogging.</p>
-        <ul class="list-unstyled ps-0">
-          <li><a class="icon-link mb-1" href="/"><i class="bi-arrow-right-circle-fill"></i>pgc-newsletter</a> (coming soon)</li>
-          <li><a class="icon-link mb-1" href="/"><i class="bi-arrow-right-circle-fill"></i>coursework-roadmap</a> (coming soon)</li>
-          <li><a class="icon-link mb-1" href="/"><i class="bi-arrow-right-circle-fill"></i>learn-zhuyin</a> (coming soon)</li>
-        </ul>
-      </div>
-      <div class="col-md-6">
-        <h2 class="text-body-emphasis">External links</h2>
-        <p>Featuring sensible defaults - not opening in a new tab.</p>
-        <ul class="list-unstyled ps-0">
-          <li><a class="icon-link mb-1" href="mailto:contact@tonyle.com"><i class="bi-envelope"></i>Email</a></li>
-          <li><a class="icon-link mb-1" href="https://github.com/tfle" ><i class="bi-github"></i>GitHub</a></li>
-          <li><a class="icon-link mb-1" href="https://www.linkedin.com/in/tonyfle/"><i class="bi-linkedin"></i>LinkedIn</a></li>
-        </ul>
-      </div>
-    </div>
-  </main>
-  <footer class="pt-5 my-5 text-body-secondary border-top">
-    <a href="#top" style="color: unset; text-decoration: unset;">Back to top</a>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+<body>
+<header>
+    <h1>Tony <em>Le</em>.</h1>
+    <aside>Not <em>Lee</em> or <em>Li</em>. (Although pronounced the same way.)</aside>
+</header>
+<p>I'm a Master of IT student at <a href="https://www.unsw.edu.au">UNSW</a>.</p>
+<p>You may also know me from <a href="https://www.sydney.edu.au">USYD</a>, where I dabbled in Medical Physics, or <a
+        href="https://www.anu.edu.au">ANU</a>, where I majored in Astronomy and Astrophysics.</p>
+<p>I like to keep myself busy with unimportant nonsense like maintaining this website.</p>
+<p>I'm also on <a href="https://www.linkedin.com/in/tonyfle/">LinkedIn</a> and <a
+        href="https://github.com/tfle">GitHub</a>.</p>
 </body>
 </html>
