--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <header>
     <h1>Tony <em>Le</em>.</h1>
 </header>
-<p>I'm a Master of IT student at <a href="https://www.unsw.edu.au">UNSW</a>.</p>
+<p>Hello world! I'm a Master of IT student at <a href="https://www.unsw.edu.au">UNSW</a>.</p>
 <p>You may also know me from <a href="https://www.sydney.edu.au">USYD</a>, where I dabbled in Medical Physics, or <a
         href="https://www.anu.edu.au">ANU</a>, where I majored in Astronomy and Astrophysics.</p>
 <p>I like to keep myself busy with unimportant nonsense like maintaining this website.</p>
